[package]
name = "screwdriver"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "screwdriver"
path = "src/main.rs"

[dependencies]
cpal = "0.15"
symphonia = { version = "0.5", features = ["all"] }
ringbuf = "0.4"
atomic_float = "1.0"
ratatui = "0.26"
crossterm = "0.27"
hound = "3.5"
anyhow = "1.0"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Pin transitive deps whose latest patch requires rustc > 1.75 (current system Rust).
strum = "=0.26.0"
strum_macros = "=0.26.0"
unicode-segmentation = ">=1.0, <1.13"  # 1.13+ requires rustc 1.85

[build-dependencies]
pkg-config = "0.3"

[profile.release]
opt-level = 3
